Custom Adjustments for Kotatsu: * Partially revert `Call Homunculus` nerf * Enable Platinum Skills, Healer and Quest Warper Custom NPCs * Remove Rebirth Zeny cost * Add full bypass to Moscovia's field quest * Re-enable the Ticket Refiner NPC * Adjust Jerrymon's location in the Illusion of Underwater quest

--- a/db/re/skill_db.yml
+++ b/db/re/skill_db.yml
@@ -7018,8 +7018,8 @@ Body:
       ItemCost:
         - Item: Germination_Breed
           Amount: 1
-        - Item: Seed_Of_Life
-          Amount: 1
+        # - Item: Seed_Of_Life
+        #   Amount: 1
     Status: Homun_Time
   - Id: 244
     Name: AM_REST
@@ -29708,9 +29708,6 @@ Body:
       IsQuest: true
     Requires:
       SpCost: 30
-      ItemCost:
-        - Item: Buy_Market_Permit
-          Amount: 1
   - Id: 2536
     Name: ALL_GUARDIAN_RECALL
     Description: Guardian's Recall
