--- a/npc/scripts_custom.conf
+++ b/npc/scripts_custom.conf
@@ -9,8 +9,8 @@
 // ----------------------- Basic Scripts -----------------------
 //npc: npc/custom/warper.txt
 //npc: npc/custom/jobmaster.txt
-//npc: npc/custom/platinum_skills.txt
-//npc: npc/custom/healer.txt
+npc: npc/custom/platinum_skills.txt
+npc: npc/custom/healer.txt
 //npc: npc/custom/breeder.txt
 //npc: npc/custom/card_seller.txt
 //npc: npc/custom/itemmall.txt
@@ -49,7 +49,7 @@
 // -- Wedding script that supports same-sex marriages
 //npc: npc/custom/etc/marriage.txt
 // -- Warper that works only after locations are unlocked
-//npc: npc/custom/etc/quest_warper.txt
+npc: npc/custom/etc/quest_warper.txt
 // -- Auto-Potion command
 //npc: npc/custom/etc/autopot.txt
 
