--- a/tools/docker/Dockerfile
+++ b/tools/docker/Dockerfile
@@ -1,11 +1,16 @@
 FROM alpine:3.11 AS builder
 
-ARG BUILDER_CONFIGURE="--enable-packetver=20211103"
+ARG PACKET_VER
+ARG DEBUG
+ARG ENABLE_WEB_SERVICE
 
 WORKDIR /rathena
 
-RUN apk add --no-cache wget git cmake make gdb zlib-dev ca-certificates linux-headers bash valgrind gcc g++ netcat-openbsd mariadb-dev
+RUN mkdir -p ./conf/import ./conf/msg_conf/import ./db/import
+
+RUN --mount=type=cache apk add wget git cmake make gdb zlib-dev ca-certificates linux-headers bash valgrind gcc g++ netcat-openbsd mariadb-dev
 RUN wget https://raw.githubusercontent.com/eficode/wait-for/v2.2.2/wait-for -O /bin/wait-for && chmod +x /bin/wait-for
+
 
 ADD ./3rdparty ./3rdparty/
 
@@ -25,11 +30,15 @@ RUN "./tools/docker/builder.sh"
 FROM alpine:3.11 AS base
 COPY --from=builder /bin/wait-for /bin/wait-for
 
+ADD .git/refs/heads/master .git/refs/heads/master
+ADD .git/refs/remotes/origin/master .git/refs/remotes/origin/master
+
 WORKDIR /rathena
 
 RUN apk add --no-cache netcat-openbsd mariadb-dev
 
 ADD ./conf ./conf/
+ADD ./tools/docker/asset/char_conf.txt ./tools/docker/asset/map_conf.txt ./tools/docker/asset/inter_conf.txt ./conf/import/
 
 ENTRYPOINT [ "/bin/wait-for", "db:3306", "--timeout=60", "--" ]
 
